# wingit

./: .gitignore  .pre-commit-bumpver.sh  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  LICENSE  README.md  justfile  pyproject.toml  skills-lock.json
.github/workflows/: qa.yml  release.yml
.scratch/: T2-issue37-implementation-plan.md
docs/adr/: 0001-drive-harnesses-headless-not-model-apis.md  0002-sessions-build-on-native-harness-sessions.md  0003-fake-harness-driver-test-seam.md  0004-xdg-state-pwd-scoping-deferred.md  0005-capability-negotiating-harness-seam.md  0006-tool-posture-ladder.md  0007-self-materializing-config-defaults-in-code.md  0008-follow-up-not-named-sessions.md  0009-gated-tag-triggered-release-workflow.md  0010-calver-via-bumpver.md  0011-project-environment-inherited-whole.md  0012-capability-disclosure-is-pull-first.md  0013-wrap-harnesses-because-they-are-already-logged-in.md  0014-fake-the-io-boundary-not-the-driver.md  0015-interrupt-is-a-hard-stop-through-shared-process-group.md  0016-copilot-driven-through-its-undocumented-json-stream.md
docs/agents/: code-conventions.md  domain.md  git-workflow.md  quality-gates.md  testing.md  tracer-workflow.md  triage-labels.md
docs/research/: harness-capabilities.md
prototypes/adapter-seam/: README.md  adapters.py  record.py  seam.py  tui.py
prototypes/adapter-seam/recordings/: claude.fail.meta.json  claude.prose.meta.json  claude.tools.meta.json  claude.tools.stdout  codex.fail.meta.json  codex.prose.meta.json  codex.prose.stdout  codex.tools.meta.json  copilot-text.prose.meta.json  copilot-text.tools.meta.json  copilot-text.tools.stdout  copilot.fail.meta.json  copilot.fail.stdout  copilot.prose.meta.json  copilot.prose.stdout  copilot.tools.meta.json  copilot.tools.stdout  opencode.fail.meta.json  opencode.fail.stdout  opencode.prose.meta.json  opencode.prose.stdout  opencode.tools.meta.json  opencode.tools.stdout  pi.fail.meta.json  pi.fail.stderr  pi.prose.meta.json  pi.prose.stdout  pi.tools.meta.json  pi.tools.stdout
prototypes/adapter-seam/workspace/: alpha.md  beta.md  gamma.md
src/tools/: __init__.py  repolint.py
src/wingit/: __init__.py  __main__.py  cli.py  console.py  core.py  runner.py
src/wingit/harnesses/: __init__.py  base.py  claude.py  codex.py  copilot.py  opencode.py  pi.py
src/wingit/schemas/: __init__.py
tests/: conftest.py  test_claude_driver.py  test_cli.py  test_codex_driver.py  test_copilot_driver.py  test_harness_registry.py  test_interrupt.py  test_opencode_driver.py  test_output_contract.py  test_pi_driver.py  test_resolve_harness.py  test_runner.py  test_silent_failure.py  test_smoke.py
tests/fixtures/claude/: fail.stdout  prose.stdout  tools.stdout
tests/fixtures/codex/: fail.stdout  tools.stdout
tests/fixtures/copilot/: fail.stderr  fail.stdout  prose.stdout  tools.stdout
tests/fixtures/opencode/: fail.stdout  prose.stdout  tools.stdout
tests/fixtures/pi/: prose.stdout  tools.stdout
tests/live/: interrupt_check.py
