[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[project]
name = "wingit"
version = "2026.6.0"
description = "Run your agent harness in headless mode"
readme = "README.md"
authors = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "configaroo>=0.6.1",
    "cyclopts>=4.20.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
]

[project.scripts]
a = "wingit.__main__:main"
wingit = "wingit.__main__:main"

[dependency-groups]
dev = [
    "bumpver>=2026.1132",
    "garuff>=2026.7.0",
    "gha-update>=0.2.0",
    "ipython>=9.15.0",
    "prek>=0.4.6",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
    "zizmor>=1.28.0",
]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
# COM812/D203/D213 conflict with the formatter or each other; PLR0913 is
# superseded by GAC008 (garuff), which counts positional args only.
ignore = ["COM812", "D203", "D213", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "SLF001", "INP001"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic resolves annotations at runtime (model schema building), so imports
# used only in model annotations must stay at runtime, not move to TYPE_CHECKING.
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "wingit.schemas.FrozenModel",
    "wingit.schemas.StrictModel",
]
runtime-evaluated-decorators = ["pydantic.field_validator"]
# cyclopts resolves command annotations at runtime (get_type_hints), so the
# `wingit.cli` parameter-type aliases must stay at runtime too. garuff's GAC007
# flags any of these left under TYPE_CHECKING; its exempt list is configured
# separately under [tool.garuff.rules.GAC007] and must be kept in sync with this.
exempt-modules = ["pathlib", "datetime", "typing", "wingit.cli"]

[tool.garuff.rules.GAC007]
# GAC007 keeps ruff-exempt modules at runtime. garuff has its own exempt list
# (it does not read ruff's), so mirror the modules in
# [tool.ruff.lint.flake8-type-checking].exempt-modules above.
exempt-modules = ["pathlib", "datetime", "typing", "wingit.cli"]

[tool.bumpver]
current_version = "v2026.6.0"
version_pattern = "vYYYY.MM.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ".pre-commit-bumpver.sh"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"',
]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
